packages/parser/test/tokenizer/E0009-octal-invalid.txt
0o8
===== err =====
anonymous:1:1: SyntaxError: E0009 - Invalid octal integer literal
1 | 0o8
  | ~~~
